# kvadminer-rs

./: Cargo.toml  Dockerfile  README.md  build_and_run.sh  docker-compose.yml
chart/kvadminer-rs/: values.yaml
chart/kvadminer-rs/templates/: ingress.yaml  service.yaml
charts/kvadminer-rs/: Chart.yaml
charts/kvadminer-rs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml
charts/kvadminer-rs/templates/tests/: test-connection.yaml
src/: errors.rs  handlers.rs  main.rs  redis_ops.rs  session.rs
static/: db-main.html  footer.html  index.html  key-edit.html  scripts.js  sidebar.html  styles.css
static/public/: styles.css
static/public/scripts/: connect.js  db-main.js
static/scripts/: connect.js  db-main.js  key-edit.js
