[package]
name = "kvadminer-rs"
version = "0.1.0"
authors = ["Darfi Sultoni <darfisultoni@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.25.1"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
